<resources>
    <string name="app_name">KDays</string>
    <string name="title_forum">板块</string>
    <string name="title_user">我的</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="avatar">头像</string>
    <string name="forum_icon">论坛图标</string>
    <string name="inner_forum_name">论坛名称</string>
    <string name="outer_forum_name">板块名称</string>
    <string name="last_post_date">最后发表时间</string>
    <string name="forget_password">忘记密码</string>
    <string name="logout">退出登录</string>
    <string name="logo">Logo</string>
    <string name="replies">回复：%s</string>
    <string name="create_at">发布时间</string>
    <string name="source">作者</string>
    <string name="subject">主题标题</string>
    <string name="forum_header_image">论坛头图</string>
    <string name="user_lv">用户等级</string>
    <string name="topic_floor">%s楼</string>
    <string name="topic_date">帖子发布时间</string>
    <string name="topic_content">帖子内容</string>
    <string name="next">下一页</string>
    <string name="previous">上一页</string>
    <string name="original_page_num">1</string>
    <string name="topic_info_page">页数</string>
    <string name="slash">/</string>
    <string name="settings">设置</string>
    <string name="change_password">修改密码</string>
    <string name="change_avatar">修改头像</string>
    <string name="reply">回复</string>
    <string name="url">外部链接</string>
    <string name="normal_topics">普通主题</string>
    <string name="logging_in">登录中</string>
    <string name="about">关于</string>
    <string name="about_us">关于论坛</string>
    <string name="agreement">使用协议</string>
    <string name="status">服务状态</string>
    <string name="uc_center">个人中心</string>
    <string name="general">常规</string>
    <string name="use_browser_summary">使用系统浏览器打开外部安全链接</string>
    <string name="use_browser_title">系统浏览器</string>
    <string name="developer">开发者（请勿随意更改）</string>
    <string name="developer_summary">生成调用日志文件，开启后会影响性能</string>
    <string name="developer_title">记录调用日志</string>
    <string name="topic_info">帖子详情</string>
    <string name="about_version">KDaysAndroid %s</string>
    <string name="about_description">第三方客户端</string>
    <string name="enable_developer">开发者选项</string>
    <string name="bbcode_show">BBCode 原始显示</string>
    <string name="bbcode_help">BBCode 使用说明</string>
    <string name="drafts">草稿箱</string>
    <string name="draft_date">草稿时间</string>
    <string name="draft_title">草稿标题</string>
    <string name="remove">删除</string>
    <string name="insert">插入</string>
    <string name="topics">主题</string>
    <string name="theme">外观</string>
    <string name="theme_selector">选择外观</string>
    <string name="pub">确认发布</string>
    <string name="text_selector">可选择文本</string>
    <string name="admins">版主</string>
    <string name="user_info">用户详情</string>
    <string name="latest">"最新"</string>
    <string name="latest_topics">最新主题</string>
    <string name="latest_posts">最新回复</string>
</resources>