<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_top_topic">

    <fragment
        android:id="@+id/navigation_top_topic"
        android:name="com.kdays.android.ui.toptopic.TopTopicFragment"
        android:label="@string/latest"
        tools:layout="@layout/fragment_toptopic" />

    <fragment
        android:id="@+id/navigation_forum"
        android:name="com.kdays.android.ui.forum.ForumFragment"
        android:label="@string/title_forum"
        tools:layout="@layout/fragment_forum" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.kdays.android.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user">
        <action
            android:id="@+id/action_user_to_settings"
            app:destination="@id/navigation_settings"
            app:enterAnim="@android:animator/fade_in"
            app:exitAnim="@android:animator/fade_out"
            app:popEnterAnim="@android:animator/fade_in"
            app:popExitAnim="@android:animator/fade_out" />
        <action
            android:id="@+id/action_user_to_about"
            app:destination="@id/navigation_about"
            app:enterAnim="@android:animator/fade_in"
            app:exitAnim="@android:animator/fade_out"
            app:popEnterAnim="@android:animator/fade_in"
            app:popExitAnim="@android:animator/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.kdays.android.ui.settings.SettingsFragment"
        android:label="@string/settings" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.kdays.android.ui.about.AboutFragment"
        android:label="@string/about" />

</navigation>