<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true">

    <!-- block descendantFocusability to avoid click-scrolling -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="blocksDescendants"
        android:padding="16dp">

        <ImageView
            android:id="@+id/post_user_avatar"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:contentDescription="@string/avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_user" />

        <TextView
            android:id="@+id/post_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/username"
            app:layout_constraintBottom_toTopOf="@id/post_user_lv"
            app:layout_constraintStart_toEndOf="@+id/post_user_avatar"
            app:layout_constraintTop_toTopOf="@+id/post_user_avatar" />

        <TextView
            android:id="@+id/post_user_lv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/user_lv"
            app:layout_constraintBottom_toBottomOf="@+id/post_user_avatar"
            app:layout_constraintStart_toEndOf="@+id/post_user_avatar"
            app:layout_constraintTop_toBottomOf="@+id/post_user_name" />

        <TextView
            android:id="@+id/post_floor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_floor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/post_user_name" />

        <TextView
            android:id="@+id/post_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_date"
            app:layout_constraintBottom_toBottomOf="@+id/post_user_lv"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/post_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:scrollbars="none"
            android:text="@string/topic_content"
            android:textIsSelectable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_user_avatar" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_content">

            <ImageView
                android:id="@+id/post_reply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/reply"
                android:src="@drawable/ic_pub" />

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>