<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="24dp">

    <TextView
        android:id="@+id/drafts_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/drafts_insert"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/drafts_remove"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/draft_date" />

    <TextView
        android:id="@+id/drafts_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/drafts_insert"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/drafts_remove"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/draft_title" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/drafts_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_toStartOf="@id/drafts_insert"
        android:contentDescription="@string/remove"
        android:src="@drawable/ic_remove"
        android:text="@string/remove" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/drafts_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="8dp"
        android:contentDescription="@string/insert"
        android:src="@drawable/ic_insert"
        android:text="@string/insert" />
</RelativeLayout>