<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_header_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="25dp">

    <ImageView
        android:id="@+id/user_header_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/avatar"
        android:src="@drawable/ic_user" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_header_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/username"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/user_header_lv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/user_lv" />

    </LinearLayout>

</LinearLayout>