<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/topic_subject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/subject"
            android:textSize="17sp"
            app:layout_constraintEnd_toStartOf="@id/topic_replies"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/topic_source"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/source"
            android:textColor="#808080"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topic_subject" />

        <TextView
            android:id="@+id/topic_replies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/replies"
            android:textColor="#808080"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@id/topic_subject"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/topic_create_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_at"
            android:textColor="#808080"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topic_replies" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>