<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.login.LoginActivity">

    <include
        android:id="@+id/login_toolbar"
        layout="@layout/layout_toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/login_toolbar">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/login_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="KDays Username"
            android:hint="@string/username"
            android:inputType="text|textNoSuggestions"
            android:maxLines="1"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/login_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_logo" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="KDays Password"
            android:hint="@string/password"
            android:inputType="textPassword|textNoSuggestions"
            android:maxLines="1"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_username" />

        <!-- set constraintHorizontal_bias to avoid overlay -->
        <CheckBox
            android:id="@+id/login_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            app:layout_constraintEnd_toEndOf="@id/login_forget"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/login_password"
            app:layout_constraintTop_toBottomOf="@id/login_password" />

        <Button
            android:id="@+id/login_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            app:layout_constraintEnd_toEndOf="@id/login_password"
            app:layout_constraintTop_toBottomOf="@id/login_password" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="15dp"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/login_register_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_forget" />

        <Button
            android:id="@+id/login_register_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="30dp"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/login_button"
            app:layout_constraintTop_toBottomOf="@+id/login_forget" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>