<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/about_logo"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/about_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_logo"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/about_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_version"
        android:layout_marginHorizontal="25dp"
        android:gravity="center"
        android:text="@string/about_description"
        android:textColor="#808080"
        android:textSize="16sp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/about_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_description"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="25dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/about_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeWidth="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/about_us"
                    android:textSize="16sp" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/about_agreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/about_us"
                app:strokeWidth="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/agreement"
                    android:textSize="16sp" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/about_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/about_agreement"
                app:strokeWidth="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/status"
                    android:textSize="16sp" />

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>